<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient_bg"
    tools:context=".activity.SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/splashLogo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/app_logo"
            android:elevation="8dp"
            android:outlineProvider="background"
            android:src="@drawable/app_logo"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />


        <TextView
            android:id="@+id/splashAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.1"
            android:text="@string/varushop"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.3"
            android:text="@string/retailer_edition"
            android:textAllCaps="true"
            android:textColor="#CCFFFFFF"
            android:textSize="12sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/splashProgressBar"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="4dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/premium_selling_experience"
        android:textColor="#99FFFFFF"
        android:textSize="12sp" />

</RelativeLayout>

